Added a form for the user to respond

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,11 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body style="margin-bottom: 500px">
     <nav>
       <a href="/">Go home</a>
     </nav>
-    
+
     <%= yield %>
   </body>
 </html>
